# FrenchRevisionAI

./: README.md  pyproject.toml
frenchrevisionai/: __main__.py  communicator.py  french_teacher.py  french_teaching_assistant.py  news_retriever.py
tests/: test_french_teacher.py
