[tool.poetry]
name = "frenchrevisionai"
version = "0.1.0"
description = ""
authors = ["ben"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
openai = "^1.7.2"
requests = "^2.31.0"
elevenlabs = "^0.2.27"
ffmpeg = "^1.4"
ffmpeg-python = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
